Bug 1545262 - Stop clearing mFullWindowRenderTarget. r=mattwoodrow

These areas only need to be cleared in rt->mDrawTarget. Once the invalid area gets
copied over to mFullWindowRenderTarget, any cleared pixels will be copied over and
clear those pixels in mFullWindowRenderTarget.
This clear wasn't only necessary, it also sometimes cleared to much, because the
clip to the invalid region that the caller sets does not apply to this DrawTarget.

Differential Revision: https://phabricator.services.mozilla.com/D41612